<resources>
    <string name="app_name">memo_book</string>
    <string name="btn_login">Login with your mobile number</string>
    <string name="btn_register">Sign up with mobile number </string>
    <string name="tv_get_start">Get Start! </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_address">Address</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="add_title">添加事项</string>
    <string name="add_time">时间</string>
    <string name="add_content">主题</string>
    <string name="add_label">标签</string>
    <string name="add_info">内容</string>
    <string name="add_update">发布</string>
    <string name="edit_title">事项详情</string>
    <string name="edit_time">时间</string>
    <string name="edit_theme">主题</string>
    <string name="edit_label">标签</string>
    <string name="edit_info">内容</string>
    <string name="edit_update">发布</string>
    <string name="memo_add">添加事项</string>
    <string name="user_setting">用户设置</string>
    <string name="memo_handle">待处理事项</string>
    <string name="user_settings">设置</string>
    <string name="user_name">用户名</string>
    <string name="user_phone">手机号</string>
    <string name="user_pwd">密码</string>
    <string name="user_email">邮箱</string>
    <string name="user_sex">性别</string>
    <string name="user_sign">签名</string>
    <string name="user_comfim">确认更改</string>
    <string name="user_logout">退出登录</string>
    <string name="tmp_text">123123</string>
</resources>