<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:background="#00000000"
                    android:src="@drawable/back" />

                <TextView
                    style="@style/login_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:text="@string/user_settings" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <EditText
                        android:id="@+id/name"
                        style="@style/login_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_phone" />

                    <EditText
                        android:id="@+id/phone"
                        style="@style/login_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_pwd" />

                    <EditText
                        android:id="@+id/pswd"
                        style="@style/login_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email" />

                    <EditText
                        android:id="@+id/email"
                        style="@style/login_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_sex" />

                    <Spinner
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_sign" />

                    <EditText
                        android:id="@+id/sign"
                        style="@style/login_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/update"
                        style="@style/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#5eb7b7"
                        android:gravity="center"
                        android:text="@string/user_comfim"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/quit"
                        style="@style/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="#fc7978"
                        android:gravity="center"
                        android:text="@string/user_logout"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>