<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:background="#00000000"
                    android:src="@drawable/back" />

                <TextView
                    style="@style/login_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:text="@string/add_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_time" />

                    <EditText
                        android:id="@+id/timer"
                        style="@style/login_edit"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="time" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_content" />

                    <EditText
                        android:id="@+id/head"
                        style="@style/login_edit"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_label" />

                    <Spinner
                        android:id="@+id/style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        style="@style/login_txt2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/body"
                        style="@style/login_edit"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_background"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:minLines="5"
                        android:padding="6dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/add"
                        style="@style/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#5eb7b7"
                        android:gravity="center"
                        android:text="@string/add_update"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</layout>